# vikunja-1

./: .gitignore  Dockerfile.dev  FRONTEND_SETUP.md  docker-compose.yml  merchant-system-design.md
front/: .env  README.md  index.html  package.json  tsconfig.json  vite.config.ts
front/src/: App.vue  main.ts
front/src/components/: AppLayout.vue
front/src/router/: index.ts
front/src/services/: api.ts
front/src/stores/: auth.ts  projects.ts  tasks.ts
front/src/types/: index.ts
front/src/views/: Home.vue  Login.vue  NotFound.vue  ProjectDetail.vue  Projects.vue  Register.vue
frontend/: package-lock.json
frontend/src/i18n/lang/: zh-CN.json
frontend/src/modelTypes/: IGeoPoint.ts  IMerchant.ts  IMerchantTag.ts
frontend/src/models/: geoPoint.ts  merchant.ts  merchantTag.ts
frontend/src/router/: index.ts
frontend/src/services/: geoPoint.ts  merchant.ts  merchantTag.ts
pkg/migration/: 20250831045800.go
pkg/models/: favorites.go  geo_points.go  merchant_tags.go  merchants.go  models.go
pkg/routes/: routes.go
pkg/services/: csv_import.go  geocoding.go
python/: .env.example  .gitignore  Dockerfile  MIGRATION.md  README.md  docker-compose.yml  pyproject.toml  run_server.py  test_api.py
python/vikunja/: __init__.py  main.py
python/vikunja/api/v1/: __init__.py  auth.py  info.py  labels.py  projects.py  tasks.py  teams.py  users.py
python/vikunja/auth/: __init__.py  dependencies.py
python/vikunja/config/: __init__.py
python/vikunja/db/: __init__.py
python/vikunja/models/: __init__.py  base.py  project.py  project_view.py  task.py  user.py
(+7 files in other folders)
